[gd_scene load_steps=10 format=3 uid="uid://bxhdprvq16gwq"]

[ext_resource type="Script" uid="uid://rt6vy5mae3if" path="res://src/interactables/TriggerInteractable.gd" id="1_stasq"]
[ext_resource type="Texture2D" uid="uid://cihka00vqqj3m" path="res://assets/textures/triggers/Alpha.svg" id="2_rd6u2"]
[ext_resource type="Script" uid="uid://tfriwfc7uruu" path="res://src/interactables/public_components/EasingComponent.gd" id="3_h2nhh"]
[ext_resource type="Script" uid="uid://cwrjbkwptgcv5" path="res://src/interactables/public_components/AlphaChangerComponent.gd" id="4_qf320"]
[ext_resource type="Script" uid="uid://cilw18c36fh6" path="res://src/interactables/public_components/TriggerHitboxComponent.gd" id="5_qf320"]
[ext_resource type="Script" uid="uid://bu1sqxc337su3" path="res://src/interactables/public_components/TargetGroupComponent.gd" id="6_78nkh"]
[ext_resource type="Script" uid="uid://m5i4ldkc8kfv" path="res://src/interactables/private_components/HitboxDisplay.gd" id="6_651ls"]
[ext_resource type="Script" uid="uid://cd3jqi4il3x2p" path="res://src/interactables/public_components/TextureRotationPinComponent.gd" id="8_alqnf"]

[sub_resource type="SegmentShape2D" id="SegmentShape2D_alqnf"]
a = Vector2(0, -8192)
b = Vector2(0, 8192)

[node name="AlphaTrigger" type="Area2D"]
script = ExtResource("1_stasq")
metadata/_custom_type_script = "uid://rt6vy5mae3if"

[node name="Sprite" type="Sprite2D" parent="."]
scale = Vector2(0.2, 0.2)
texture = ExtResource("2_rd6u2")

[node name="Hitbox" type="CollisionShape2D" parent="."]
scale = Vector2(1.2, 1.2)
shape = SubResource("SegmentShape2D_alqnf")
debug_color = Color(0, 1, 0, 0)

[node name="TargetGroupComponent" type="Node" parent="."]
script = ExtResource("6_78nkh")
metadata/_custom_type_script = "uid://bu1sqxc337su3"

[node name="AlphaChangerComponent" type="Node" parent="."]
script = ExtResource("4_qf320")
metadata/_custom_type_script = "uid://cwrjbkwptgcv5"

[node name="EasingComponent" type="Node" parent="."]
script = ExtResource("3_h2nhh")
metadata/_custom_type_script = "uid://tfriwfc7uruu"

[node name="TriggerHitboxComponent" type="Node" parent="." node_paths=PackedStringArray("_hitbox")]
script = ExtResource("5_qf320")
_hitbox = NodePath("../Hitbox")
metadata/_custom_type_script = "uid://cilw18c36fh6"

[node name="HitboxDisplay" type="Node2D" parent="." node_paths=PackedStringArray("hitbox")]
show_behind_parent = true
script = ExtResource("6_651ls")
hitbox = NodePath("../Hitbox")
color = Color(0, 1, 1, 1)
metadata/_custom_type_script = "uid://m5i4ldkc8kfv"

[node name="TextureRotationPin" type="Node" parent="." node_paths=PackedStringArray("sprite")]
script = ExtResource("8_alqnf")
sprite = NodePath("../Sprite")
sprite_scale = Vector2(0.2, 0.2)
metadata/_custom_type_script = "uid://cd3jqi4il3x2p"
